# RailInfo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
clients/cyd/: README.md  _smoketest.py  boards.py  config.py.example  deploy.ps1  railinfo_client.py  setup_log.md
clients/cyd/lib/: ili9341.py
clients/cyd/tools/: gen_fonts.ps1
clients/heltec/: README.md  _smoketest.py  board_mockup.py  boards.py  config.py.example  demo.py  deploy.ps1  dump_board.py  multi_size_demo.py  portrait_mockup.py  railinfo_client.py  setup_log.md
clients/heltec/lib/: depg0213.py  dm16mono.py  dm18mono.py  dm19mono.py  dotmatrix16.py  dotmatrix18.py  dotmatrix19.py  dotmatrix20.py  dotmatrix21.py  dotmatrix22.py  dotmatrix24.py  dotmatrix25.py  dotmatrix26.py  dotmatrix28.py  dotmatrix29.py  dotmatrix30.py  dotmatrix9.py
clients/heltec/tools/: gen_fonts.ps1  tabular_digits.py
railinfo/: __init__.py  config.py  server.py  service.py
railinfo/domain/: __init__.py  mapper.py  models.py
railinfo/ldbws/: __init__.py  client.py
railinfo/pixoo/: __init__.py  device.py  runner.py
railinfo/renderers/: __init__.py  pixoo.py  terminal.py
scripts/: deploy-to-nas.ps1  preview_board.py
tests/: conftest.py  test_config.py  test_mapper.py  test_pixoo.py  test_runner.py  test_server.py  test_service.py
